get the Analyzer working