@@ -1,93 +1,60 @@
 # GitClout
 
+## The project
+GitClout is a web app that analyzes a specified Git repository (e.g. github or gitlab) to offers insights into the contributions made by each contributor.
 
+The back-end uses Java with Spring Boot v3 (Spring Framework 6) with WebMVC to serve a REST API and the static pages.
 
-## Getting started
+The front-end uses angular 16 and tailwind.
 
-To make it easy for you to get started with GitLab, here's a list of recommended next steps.
+***This GitClout app is a re-implementation of the original [GitClout app](https://gitlab.com/cydaw6/sebbah-bastos) developped by [val.sebb](https://gitlab.com/val.sebb) and me,***
+using different back-end and front-end frameworks.
 
-Already a pro? Just edit this README.md and make it your own. Want to make it easy? [Use the template at the bottom](#editing-this-readme)!
-
-## Add your files
-
-- [ ] [Create](https://docs.gitlab.com/ee/user/project/repository/web_editor.html#create-a-file) or [upload](https://docs.gitlab.com/ee/user/project/repository/web_editor.html#upload-a-file) files
-- [ ] [Add files using the command line](https://docs.gitlab.com/ee/gitlab-basics/add-file.html#add-a-file-using-the-command-line) or push an existing Git repository with the following command:
-
-```
-cd existing_repo
-git remote add origin https://gitlab.com/cydaw6/gitclout.git
-git branch -M main
-git push -uf origin main
+### Run the app
+```sh
+java --enable-preview -jar gitclout-1.0.0.jar 
 ```
 
-## Integrate with your tools
+At start, the address of the web main page will be printed out as well as the swagger page address of the OPEN API file, for example :
+```shell
+WEB server is up! http://localhost:8080
+OPEN API http://localhost:8080/openapi/ui
+```
 
-- [ ] [Set up project integrations](https://gitlab.com/cydaw6/gitclout/-/settings/integrations)
+#### Configuration
 
-## Collaborate with your team
+You can override some default properties with inline options at app start
 
-- [ ] [Invite team members and collaborators](https://docs.gitlab.com/ee/user/project/members/)
-- [ ] [Create a new merge request](https://docs.gitlab.com/ee/user/project/merge_requests/creating_merge_requests.html)
-- [ ] [Automatically close issues from merge requests](https://docs.gitlab.com/ee/user/project/issues/managing_issues.html#closing-issues-automatically)
-- [ ] [Enable merge request approvals](https://docs.gitlab.com/ee/user/project/merge_requests/approvals/)
-- [ ] [Set auto-merge](https://docs.gitlab.com/ee/user/project/merge_requests/merge_when_pipeline_succeeds.html)
 
-## Test and Deploy
+| Name                         | Type    | default         | comment                                                                                                                           |
+|------------------------------|---------|-----------------|-----------------------------------------------------------------------------------------------------------------------------------|
+| --server.port                | integer | 8080            |                                                                                                                                   |
+| --app.analysisPoolSize       | integer | 2               |                                                                                                                              
+| --app.analysisThreadPoolSize | integer | 3               |                                                                                                                                   |
+| --app.data                   | path    | .gitclout-data/ | A directory, containing the app’s data, cloned repositories and database, <br> is created at the current working directory's root |
 
-Use the built-in continuous integration in GitLab.
 
-- [ ] [Get started with GitLab CI/CD](https://docs.gitlab.com/ee/ci/quick_start/index.html)
-- [ ] [Analyze your code for known vulnerabilities with Static Application Security Testing (SAST)](https://docs.gitlab.com/ee/user/application_security/sast/)
-- [ ] [Deploy to Kubernetes, Amazon EC2, or Amazon ECS using Auto Deploy](https://docs.gitlab.com/ee/topics/autodevops/requirements.html)
-- [ ] [Use pull-based deployments for improved Kubernetes management](https://docs.gitlab.com/ee/user/clusters/agent/)
-- [ ] [Set up protected environments](https://docs.gitlab.com/ee/ci/environments/protected_environments.html)
 
-***
 
-# Editing this README
 
-When you're ready to make this README your own, just edit this file and use the handy template below (or feel free to structure it however you want - this is just a starting point!). Thanks to [makeareadme.com](https://www.makeareadme.com/) for this template.
+### Programming language support
 
-## Suggestions for a good README
+As of today GitClout app v1.0.0 supports these programming languages,
+and other types of contributions in a given git repository:
 
-Every project is different, so consider which of these sections apply to yours. The sections used in the template are suggestions for most open source projects. Also keep in mind that while a README can be too long and detailed, too long is better than too short. If you think your README is too long, consider utilizing another form of documentation rather than cutting out information.
 
-## Name
-Choose a self-explaining name for your project.
+| Category | Type                                                                                                          | 
+|----------|---------------------------------------------------------------------------------------------------------------|
+| CODE     | c, java, html, css, python, ruby, <br/>javascript, typescript, ocaml, php, jasm                               |
+| CONFIG   | git, yaml,                                                                                                    |
+| DOC      | markdown, documentation in code (javadoc, docstring, etc.. any extracted doc in code file is undistinguished) |
+| BUILD    | makefile, maven, gradle                                                                                       |
 
-## Description
-Let people know what your project can do specifically. Provide context and add a link to any reference visitors might be unfamiliar with. A list of Features or a Background subsection can also be added here. If there are alternatives to your project, this is a good place to list differentiating factors.
 
-## Badges
-On some READMEs, you may see small images that convey metadata, such as whether or not all the tests are passing for the project. You can use Shields to add some to your README. Many services also have instructions for adding a badge.
+### Credits
 
-## Visuals
-Depending on what you are making, it can be a good idea to include screenshots or even a video (you'll frequently see GIFs rather than actual videos). Tools like ttygif can help, but check out Asciinema for a more sophisticated method.
+Many thanks to Dominik Stadler's jgit-cookbook repository and Rüdiger Herrmann for his post on Diffs with JGit
+that allowed us to better understand and deal with the JGit API.<br>
 
-## Installation
-Within a particular ecosystem, there may be a common way of installing things, such as using Yarn, NuGet, or Homebrew. However, consider the possibility that whoever is reading your README is a novice and would like more guidance. Listing specific steps helps remove ambiguity and gets people to using your project as quickly as possible. If it only runs in a specific context like a particular programming language version or operating system or has dependencies that have to be installed manually, also add a Requirements subsection.
-
-## Usage
-Use examples liberally, and show the expected output if you can. It's helpful to have inline the smallest example of usage that you can demonstrate, while providing links to more sophisticated examples if they are too long to reasonably include in the README.
-
-## Support
-Tell people where they can go to for help. It can be any combination of an issue tracker, a chat room, an email address, etc.
-
-## Roadmap
-If you have ideas for releases in the future, it is a good idea to list them in the README.
-
-## Contributing
-State if you are open to contributions and what your requirements are for accepting them.
-
-For people who want to make changes to your project, it's helpful to have some documentation on how to get started. Perhaps there is a script that they should run or some environment variables that they need to set. Make these steps explicit. These instructions could also be useful to your future self.
-
-You can also document commands to lint the code or run tests. These steps help to ensure high code quality and reduce the likelihood that the changes inadvertently break something. Having instructions for running tests is especially helpful if it requires external setup, such as starting a Selenium server for testing in a browser.
-
-## Authors and acknowledgment
-Show your appreciation to those who have contributed to the project.
-
-## License
-For open source projects, say how it is licensed.
-
-## Project status
-If you have run out of energy or time for your project, put a note at the top of the README saying that development has slowed down or stopped completely. Someone may choose to fork your project or volunteer to step in as a maintainer or owner, allowing your project to keep going. You can also make an explicit request for maintainers.
+https://github.com/centic9/jgit-cookbook <br>
+https://www.codeaffine.com/2016/06/16/jgit-diff/
